# corsair-void-rs

./: CLAUDE.md  Cargo.toml  README.md  corsair-void-rs.md
.github/workflows/: release.yml
src/: autostart.rs  config.rs  main.rs  sound.rs
src/audio/: boost.rs  linux.rs  mod.rs  windows.rs
src/device/: hid.rs  mod.rs  protocol.rs  sysfs.rs
src/ipc/: mod.rs
src/tray/: mod.rs
