[package]
name = "corsair-void"
version = "0.1.0"
edition = "2021"
description = "Lightweight controller for Corsair Void Elite RGB Wireless headset"
default-run = "corsair-void"

[dependencies]
hidapi = "2.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.17"
rodio = "0.17"
dirs = "5"
env_logger = "0.11"
log = "0.4"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libpulse-binding = "2.28"
